--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+asgiref==3.2.3
 backcall==0.1.0
 bcrypt==3.1.7
 certifi==2019.11.28
@@ -5,7 +6,8 @@ cffi==1.14.0
 chardet==3.0.4
 colorama==0.4.3
 decorator==4.4.1
-Django==2.2
+Django==3.0.4
+django-debug-toolbar==2.2
 idna==2.8
 ipython==7.12.0
 ipython-genutils==0.2.0
